--- a/src/styles/UserInfoForm.module.css
+++ b/src/styles/UserInfoForm.module.css
@@ -1,6 +1,7 @@
 .page {
+  flex: 1;
   width: 100%;
-   height: 100vh; 
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +9,9 @@
   font-family: "Inter", sans-serif;
   box-sizing: border-box;
   padding: 1.25rem;
-  overflow-y: auto;
+  overflow: hidden;
 }
+
 
 .container {
   width: 100%;
